--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,13 @@ main {
   max-width: 120rem;
   padding: 4rem 3rem;
   box-sizing: border-box;
+  background: var(--light-bg);
+}
+main .flexslider {
+  background: inherit;
+}
+main .flexslider .flexslider-container {
+  padding: 2.8em;
 }
 .site-header-inner {
   max-width: 120rem;
@@ -20,13 +27,11 @@ main {
   flex: 1;
 }
 .content-wrapper {
+  max-width: calc(100% - 30rem);
   flex: 1;
   padding-right: 3rem;
   margin-right: 3rem;
   border-right: 1px solid var(--bg);
-}
-nav.main-menu a:first-child {
-  /*margin-left:3rem;*/
 }
 aside.cta {
   width: 30rem;
@@ -49,6 +54,7 @@ aside.cta {
     flex-direction: column-reverse;
   }
   .content-wrapper {
+    max-width: 100%;
     flex: auto;
     padding-right: 0;
     margin-right: 0;
@@ -544,6 +550,9 @@ ul.cat-details li:after {
   margin: 0.4em;
   font-size: 9pt;
 }
+.userform .userform-progress .step-buttons {
+  padding: 0;
+}
 .userform .userform-progress > p {
   display: none;
 }
@@ -554,8 +563,11 @@ ul.cat-details li:after {
   display: block;
 }
 .userform .userform-progress .step-button-wrapper.current button {
-  color: lightgray;
-  border-color: rgba(0, 0, 0, 0);
+  background-color: #efe285;
+  cursor: default;
+}
+.userform .userform-progress .step-button-wrapper button:disabled {
+  background-color: lightgray;
 }
 .userform nav {
   margin: 0.5em 0;
@@ -730,7 +742,6 @@ aside article h4 {
   --light-blue: #7a80bf;
   --bg: #4e559a;
   --light-bg: rgba(255, 255, 255, 0.7);
-  --cta: #e4cd2a;
 }
 * {
   box-sizing: border-box;
@@ -752,9 +763,6 @@ body {
   padding: 0;
   font-family: "Open Sans", sans-serif;
   text-align: justify;
-}
-main {
-  background: var(--light-bg);
 }
 h1,
 h2,
@@ -784,7 +792,7 @@ a:hover {
 }
 img {
   width: 20rem;
-  box-shadow: 0 0 0.2rem 0.1rem var(--cta);
+  box-shadow: 0 0 0.2rem 0.1rem #e4cd2a;
   border-radius: 0.3rem;
 }
 .components input,
@@ -800,7 +808,7 @@ img {
 .components button,
 .userform button,
 a.button {
-  background: var(--cta);
+  background: #e4cd2a;
   border: 1px solid #867818;
   border-radius: 0.3rem;
   text-transform: uppercase;
@@ -810,12 +818,13 @@ a.button {
   text-decoration: none;
   color: black;
   font-weight: 100;
+  display: inline-block;
 }
 .components button:hover,
 .userform button:hover,
 a.button:hover {
   text-shadow: none;
-  border-color: var(--cta);
+  border-color: #e4cd2a;
 }
 header.site-header {
   padding-top: 2rem;
@@ -880,15 +889,15 @@ footer a {
   margin: 1em;
 }
 .resized.type-video iframe {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .ss-htmleditorfield-file.embed,
 .ss-htmleditorfield-file.embed iframe {
-    max-width: 100%;
+  max-width: 100%;
 }
 .slideshow .flexslider .slides img {
-    width: auto;
-    margin: 0 auto;
-    max-width: 100%;
+  width: auto;
+  margin: 0 auto;
+  max-width: 100%;
 }
