--- a/public/css/form.less
+++ b/public/css/form.less
@@ -130,6 +130,9 @@
   font-size: 9pt;
 }
 .userform {
+    .userform-fields {
+        max-width: 520px;
+    }
     .userform-progress {
         .step-buttons {
             padding: 0;
@@ -158,26 +161,22 @@
         .buttonStyle();
     }
     .field {
+        .right-title {
+            font-size: 9pt;
+        }
         &.text, &.dropdown, &.listbox, &.textarea, &.checkbox .middleColumn, &.file {
-            display: flex;
             justify-content: space-between;
             align-items: baseline;
         }
         &.text, &.dropdown, &.listbox, &.textarea, &.file {
             input, select, textarea {
-                width: 14em;
+                width: 100%;
             }
-        }
-        // input[type="file"].file {
-        //     display: none;
-        // }
-        &.checkbox .middleColumn {
-            flex-direction: row-reverse;
         }
         margin: .5em;
         label {
             font-weight: 100;
-            float: left;
+            padding-left: .3em;
         }
     }
     .step-navigation, .userform-progress {
