--- a/public/css/main.css
+++ b/public/css/main.css
@@ -550,6 +550,9 @@ ul.cat-details li:after {
   margin: 0.4em;
   font-size: 9pt;
 }
+.userform .userform-fields {
+  max-width: 520px;
+}
 .userform .userform-progress .step-buttons {
   padding: 0;
 }
@@ -579,13 +582,15 @@ ul.cat-details li:after {
 .userform .field {
   margin: 0.5em;
 }
+.userform .field .right-title {
+  font-size: 9pt;
+}
 .userform .field.text,
 .userform .field.dropdown,
 .userform .field.listbox,
 .userform .field.textarea,
 .userform .field.checkbox .middleColumn,
 .userform .field.file {
-  display: flex;
   justify-content: space-between;
   align-items: baseline;
 }
@@ -604,14 +609,11 @@ ul.cat-details li:after {
 .userform .field.listbox textarea,
 .userform .field.textarea textarea,
 .userform .field.file textarea {
-  width: 14em;
-}
-.userform .field.checkbox .middleColumn {
-  flex-direction: row-reverse;
+  width: 100%;
 }
 .userform .field label {
   font-weight: 100;
-  float: left;
+  padding-left: 0.3em;
 }
 .userform .step-navigation,
 .userform .userform-progress {
@@ -900,4 +902,41 @@ footer a {
   width: auto;
   margin: 0 auto;
   max-width: 100%;
+}
+.element.dynamic__elements__image__elements__elementimage > img {
+  max-width: 100%;
+  width: auto;
+}
+.element.dynamic__elements__gallery__elements__elementphotogallery .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+.element.dynamic__elements__gallery__elements__elementphotogallery .row > * {
+  margin-bottom: 0 !important;
+  padding: 3px;
+}
+.element.dynamic__elements__gallery__elements__elementphotogallery .row > * * {
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 900px) {
+  .element.dynamic__elements__gallery__elements__elementphotogallery .row > * {
+    width: 25%;
+  }
+}
+@media (min-width: 700px) and (max-width: 899px) {
+  .element.dynamic__elements__gallery__elements__elementphotogallery .row > * {
+    width: 33%;
+  }
+}
+@media (min-width: 500px) and (max-width: 699px) {
+  .element.dynamic__elements__gallery__elements__elementphotogallery .row > * {
+    width: 50%;
+  }
+}
+@media (max-width: 499px) {
+  .element.dynamic__elements__gallery__elements__elementphotogallery .row > * {
+    width: 100%;
+  }
 }
