--- a/public/css/main.less
+++ b/public/css/main.less
@@ -212,3 +212,34 @@ footer a {
     margin: 0 auto;
     max-width: 100%;
 }
+.element.dynamic__elements__image__elements__elementimage > img {
+    max-width: 100%;
+    width: auto;
+}
+
+.element.dynamic__elements__gallery__elements__elementphotogallery .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    & > * {
+        & * {
+            width: 100%;
+            height: 100%;
+
+        }
+        margin-bottom: 0 !important;
+        padding: 3px;
+        @media(min-width: 900px) {
+            width: 25%;
+        }
+        @media(min-width: 700px) and (max-width: 899px) {
+            width: 33%;
+        }
+        @media(min-width: 500px) and (max-width: 699px) {
+            width: 50%;
+        }
+        @media(max-width: 499px) {
+            width: 100%;
+        }
+    }
+}
