accordion and image elements styling

--- a/public/css/blog.less
+++ b/public/css/blog.less
@@ -34,7 +34,7 @@
 }
 aside {
     article {
-        border-bottom: 1px solid var(--bg);
+        border-bottom: 1px solid @bgCol;
         padding-bottom: 2rem;
         display: flex;
         flex-direction: column;
