--- a/public/css/colors.less
+++ b/public/css/colors.less
@@ -12,3 +12,7 @@
 @menuHighlightColor: #eee;
 
 @buttonColor: #e4cd2a;
+
+@lightBlue: #7a80bf;
+@bgCol: #4e559a;
+@lightBgCol: rgba(255,255,255,0.7);
