--- a/public/css/menu.less
+++ b/public/css/menu.less
@@ -74,7 +74,7 @@
                 & .sub-items {
                     display: block;
                     & > .item a {
-                        background-color: var(--light-blue);
+                        background-color: @lightBlue;
                         &:hover {
                             background: lighten(#7a80bf, 5%);
                         }
