--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ main {
   max-width: 120rem;
   padding: 4rem 3rem;
   box-sizing: border-box;
-  background: var(--light-bg);
+  background: rgba(255, 255, 255, 0.7);
 }
 main .flexslider {
   background: inherit;
@@ -31,7 +31,7 @@ main .flexslider .flexslider-container {
   flex: 1;
   padding-right: 3rem;
   margin-right: 3rem;
-  border-right: 1px solid var(--bg);
+  border-right: 1px solid #4e559a;
 }
 aside.cta {
   width: 30rem;
@@ -59,11 +59,11 @@ aside.cta {
     padding-right: 0;
     margin-right: 0;
     border-right: none;
-    border-bottom: 1px solid var(--bg);
+    border-bottom: 1px solid #4e559a;
   }
   .startpage .content-wrapper {
     border-bottom: none;
-    border-top: 1px solid var(--bg);
+    border-top: 1px solid #4e559a;
   }
   aside.cta {
     width: auto;
@@ -173,7 +173,7 @@ aside.cta {
     display: block;
   }
   .main-menu > .item:hover .sub-items > .item a {
-    background-color: var(--light-blue);
+    background-color: #7a80bf;
   }
   .main-menu > .item:hover .sub-items > .item a:hover {
     background: #8b90c7;
@@ -658,7 +658,7 @@ textarea {
   }
 }
 aside article {
-  border-bottom: 1px solid var(--bg);
+  border-bottom: 1px solid #4e559a;
   padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
@@ -740,11 +740,6 @@ aside article h4 {
   src: url(../fonts/OpenSans-Regular.eot);
   src: url(../fonts/OpenSans-Regular.eot?#iefix) format("embedded-opentype"), url(../fonts/OpenSans-Regular.woff2) format("woff2"), url(../fonts/OpenSans-Regular.woff) format("woff"), url(../fonts/OpenSans-Regular.ttf) format("truetype"), url(../fonts/OpenSans-Regular.svg) format("svg");
 }
-:root {
-  --light-blue: #7a80bf;
-  --bg: #4e559a;
-  --light-bg: rgba(255, 255, 255, 0.7);
-}
 * {
   box-sizing: border-box;
 }
@@ -754,8 +749,7 @@ html {
 }
 body {
   font-size: 1.6rem;
-  /*background:var(--bg);*/
-  background: linear-gradient(180deg, var(--light-blue), var(--light-blue), var(--bg)) no-repeat var(--bg);
+  background: linear-gradient(180deg, #7a80bf, #7a80bf, #4e559a) no-repeat #4e559a;
 }
 html,
 body {
@@ -783,14 +777,16 @@ h2 {
 h3 {
   font-size: 2rem;
 }
-main a {
-  color: var(--bg);
+main a,
+.ui-widget .ui-widget-content a {
+  color: #4e559a;
   font-weight: 700;
-  text-shadow: 0.1rem 0.1rem 0.1rem var(--light-bg);
+  text-shadow: 0.1rem 0.1rem 0.1rem rgba(255, 255, 255, 0.7);
 }
-a:hover {
-  color: var(--light-bg);
-  text-shadow: 0.1rem 0.1rem 0.1rem var(--bg);
+main a:hover,
+.ui-widget .ui-widget-content a:hover {
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 0.1rem 0.1rem 0.1rem #4e559a;
 }
 img {
   width: 20rem;
@@ -802,9 +798,9 @@ img {
 .userform select,
 .userform textarea,
 .chosen-choices {
-  border: 0.1rem solid var(--bg);
+  border: 0.1rem solid #4e559a;
   border-radius: 0.3rem;
-  background: var(--light-bg);
+  background: rgba(255, 255, 255, 0.7);
   padding: 0.5rem 1rem;
 }
 .components button,
@@ -903,7 +899,14 @@ footer a {
   margin: 0 auto;
   max-width: 100%;
 }
-.element.dynamic__elements__image__elements__elementimage > img {
+.element.dynamic__elements__accordion__elements__elementaccordion h3.ui-accordion-header {
+  background-color: #4e559a;
+}
+.element.dynamic__elements__accordion__elements__elementaccordion h3.ui-accordion-header.ui-state-default {
+  color: #fff;
+}
+.element.dynamic__elements__image__elements__elementimage > img,
+.ui-accordion-content img {
   max-width: 100%;
   width: auto;
 }
