--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -1,5 +1,6 @@
 // main: main.less
 @import "grid/variables.less";
+@import "colors.less";
 @sidebarWidth: 30rem;
 main {
     display: flex;
@@ -7,7 +8,7 @@ main {
     max-width: 120rem;
     padding: 4rem 3rem;
     box-sizing:border-box;
-    background:var(--light-bg);
+    background: @lightBgCol;
     & .flexslider {
         background: inherit;
         .flexslider-container {
@@ -37,7 +38,7 @@ main {
     flex: 1;
     padding-right: 3rem;
     margin-right: 3rem;
-    border-right: 1px solid var(--bg);
+    border-right: 1px solid @bgCol;
 }
 
 aside.cta {
@@ -68,12 +69,12 @@ aside.cta {
         padding-right:0;
         margin-right:0;
         border-right:none;
-        border-bottom: 1px solid var(--bg);
+        border-bottom: 1px solid @bgCol;
     }
 
     .startpage .content-wrapper {
         border-bottom:none;
-        border-top:1px solid var(--bg);
+        border-top:1px solid @bgCol;
     }
 
     aside.cta {
