form button styling

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -99,7 +99,7 @@ img {
     padding:0.5rem 1rem;
 }
 
-.components button, .userform button, a.button {
+.components button, .userform button, .userform input[type=submit], .userform input[type=reset], a.button {
     background: @buttonColor;
     border: 1px solid #867818;
     border-radius: 0.3rem;
