--- a/public/css/main.css
+++ b/public/css/main.css
@@ -553,7 +553,7 @@ ul.cat-details li:after {
 .userform .userform-fields {
   max-width: 520px;
 }
-.userform .userform-progress .step-buttons {
+.userform .step-buttons {
   padding: 0;
 }
 .userform .userform-progress > p {
@@ -805,6 +805,8 @@ img {
 }
 .components button,
 .userform button,
+.userform input[type=submit],
+.userform input[type=reset],
 a.button {
   background: #e4cd2a;
   border: 1px solid #867818;
@@ -820,6 +822,8 @@ a.button {
 }
 .components button:hover,
 .userform button:hover,
+.userform input[type=submit]:hover,
+.userform input[type=reset]:hover,
 a.button:hover {
   text-shadow: none;
   border-color: #e4cd2a;
