--- a/public/css/blog.less
+++ b/public/css/blog.less
@@ -94,8 +94,9 @@ aside {
     font-family: cursive;
     margin: 2em 0;
 }
-.load-more-btn {
+.load-more-container {
     text-align: center;
-    width: 100%;
+    width: ~"calc(100% - 2em)";
+    margin: 1em;
     display: block;
 }
