--- a/public/css/main.css
+++ b/public/css/main.css
@@ -541,6 +541,9 @@ ul.cat-details li:after {
   cursor: pointer;
   background-color: white;
 }
+textarea {
+  width: 100%;
+}
 .user-form-container {
   max-width: 500px;
   margin-left: auto;
@@ -819,7 +822,7 @@ img {
 .userform button,
 .userform input[type=submit],
 .userform input[type=reset],
-a.button {
+.button {
   background: #e4cd2a;
   border: 1px solid #867818;
   border-radius: 0.3rem;
@@ -836,7 +839,7 @@ a.button {
 .userform button:hover,
 .userform input[type=submit]:hover,
 .userform input[type=reset]:hover,
-a.button:hover {
+.button:hover {
   text-shadow: none;
   border-color: #e4cd2a;
   color: #000;
