form validation message styling

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -122,13 +122,16 @@ textarea {
     margin-left: auto;
     margin-right: auto;
 }
-.error.message {
+#search-agent {
+    cursor: pointer;
+}
+.error.message, .validationerror .message {
     border: 1px solid red;
     padding: .5em;
     background-color: white;
     border-radius: .15em;
     font-size: 9pt;
-    display: block;
+    display: inline-block;
 }
 .userform {
     .userform-fields {
