--- a/public/css/search.less
+++ b/public/css/search.less
@@ -150,3 +150,12 @@ ul.cat-details {
         }
     }
 }
+
+#search-agent {
+    cursor: pointer;
+}
+.notification-popup-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
